# mlops-project

./: .gitignore  .pre-commit-config.yaml  README.md  ckpt.dvc  infer.py  pyproject.toml  train.py
.dvc/: config
configs/: main.yaml
mlops-project/: dataset.py  infer.py  model.py  train.py
mlops-project/configs/: infer.yaml  main.yaml  train.yaml
mlops-project/configs/optimizer/: Adam.yaml  SGD.yaml
mlops-project/configs/transform/: resize_norm.yaml
mlops-project/data/: .gitignore  cats_dogs.dvc  ckpt.dvc  onnx.dvc
