[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["pe4eniks <evgeniipishchik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"
torch = "2.0.1"
dvc = "^3.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
