[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["pe4eniks <evgeniipishchik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"
torch = "2.0.1"
dvc = {extras = ["gdrive"], version = "^3.30.3"}
numpy = "^1.26.2"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
